// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`enroll-profile-update-required-field fails client side validation with empty required fields 1`] = `
<div>
  <div
    class="MuiScopedCssBaseline-root emotion-0"
  >
    <div
      class="MuiScopedCssBaseline-root emotion-1"
    >
      <main
        class="auth-container main-container MuiBox-root emotion-2"
        data-commit="b9bbc0140703c3fbf0e2e58920362e70"
        data-version="0.0.0"
        dir="ltr"
        id="okta-sign-in"
        lang="en"
      >
        <div
          class="MuiScopedCssBaseline-root emotion-3"
        >
          <div
            class="MuiBox-root emotion-4"
          >
            <div
              class="MuiBox-root emotion-5"
            >
              <div
                class="okta-sign-in-header auth-header MuiBox-root emotion-6"
              >
                <h1
                  class="MuiTypography-root MuiTypography-h1 emotion-7"
                />
              </div>
              <div
                class="MuiBox-root emotion-8"
              >
                <form
                  class="o-form MuiBox-root emotion-9"
                  data-se="o-form"
                  novalidate=""
                >
                  <div
                    class="MuiBox-root emotion-10"
                  >
                    <div
                      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiAlert-root MuiAlert-calloutError MuiAlert-callout emotion-11"
                      role="alert"
                    >
                      <div
                        class="MuiAlert-icon emotion-12"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit emotion-13"
                          fill="none"
                          focusable="false"
                          viewBox="0 0 24 24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            clip-rule="evenodd"
                            d="M9.879 1.707a3 3 0 0 1 4.242 0l8.172 8.172a3 3 0 0 1 0 4.242l-8.172 8.172a3 3 0 0 1-4.242 0L1.707 14.12a3 3 0 0 1 0-4.242L9.88 1.707ZM12 13a1 1 0 0 1-1-1V7h2v5a1 1 0 0 1-1 1Zm0 1.75a1.25 1.25 0 1 0 0 2.5 1.25 1.25 0 0 0 0-2.5Z"
                            fill="currentColor"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </div>
                      <div
                        class="MuiAlert-message emotion-14"
                      >
                        <span
                          class="MuiBox-root emotion-15"
                        >
                          error
                        </span>
                        <div
                          class="MuiBox-root emotion-2"
                        >
                          We found some errors. Please review the form and make corrections.
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-17"
                  >
                    <div
                      class="MuiBox-root emotion-18"
                    >
                      <div
                        class="identifier-container MuiBox-root emotion-19"
                      >
                        <div
                          class="MuiBox-root emotion-20"
                        >
                          <span
                            class="MuiBox-root emotion-21"
                          >
                            <svg
                              class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit emotion-22"
                              fill="none"
                              focusable="false"
                              role="img"
                              viewBox="0 0 24 24"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                clip-rule="evenodd"
                                d="M15.5 6.5a3.5 3.5 0 1 1-7 0 3.5 3.5 0 0 1 7 0Zm2 0a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0ZM5 23c0-2.357.694-4.363 1.886-5.762C8.064 15.856 9.782 15 12 15c2.215 0 3.934.862 5.113 2.25C18.307 18.652 19 20.66 19 23h2c0-2.722-.807-5.216-2.363-7.046C17.067 14.107 14.785 13 12 13c-2.782 0-5.064 1.097-6.636 2.941C3.806 17.77 3 20.263 3 23h2Z"
                                fill="currentColor"
                                fill-rule="evenodd"
                              />
                              <title>
                                User
                              </title>
                            </svg>
                          </span>
                          <span
                            aria-label="testUser@okta.com"
                            class="identifier no-translate MuiBox-root emotion-23"
                            data-se="identifier"
                            title="testUser@okta.com"
                          >
                            testUser@okta.com
                          </span>
                        </div>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-18"
                    >
                      <div
                        class="MuiBox-root emotion-25"
                      >
                        <h2
                          class="MuiTypography-root MuiTypography-h4 emotion-26"
                          data-se="o-form-head"
                          id="profile-update_Title_Additional_Profile_information_1"
                          tabindex="-1"
                        >
                          Additional Profile information
                        </h2>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-18"
                    >
                      <div
                        class="MuiBox-root emotion-25"
                      >
                        <p
                          class="MuiTypography-root MuiTypography-body1 MuiTypography-paragraph emotion-29"
                          data-se="o-form-explain"
                          id="profile-update_Description_Fields_are_required_unless_marked_optional_2"
                        >
                          Fields are required unless marked optional.
                        </p>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-18"
                    >
                      <div
                        class="MuiBox-root emotion-2"
                      >
                        <label
                          class="MuiFormLabel-root MuiInputLabel-root MuiFormLabel-colorPrimary MuiInputLabel-root emotion-32"
                          data-shrink="false"
                          for="userProfile.newAttribute"
                        >
                          Some custom attribute
                          <p
                            class="MuiTypography-root MuiTypography-subtitle1 emotion-33"
                          >
                            Optional
                          </p>
                        </label>
                        <div
                          class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-fullWidth emotion-34"
                        >
                          <input
                            aria-invalid="false"
                            class="MuiInputBase-input emotion-35"
                            data-se="userProfile.newAttribute"
                            id="userProfile.newAttribute"
                            name="userProfile.newAttribute"
                            type="text"
                          />
                        </div>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-18"
                    >
                      <div
                        class="MuiBox-root emotion-2"
                      >
                        <label
                          class="MuiFormLabel-root MuiInputLabel-root MuiFormLabel-colorPrimary MuiInputLabel-root emotion-32"
                          data-shrink="false"
                          for="userProfile.secondEmail"
                        >
                          Secondary email
                          <p
                            class="MuiTypography-root MuiTypography-subtitle1 emotion-33"
                          >
                            Optional
                          </p>
                        </label>
                        <div
                          class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-fullWidth emotion-34"
                        >
                          <input
                            aria-describedby="userProfile.secondEmail-explain"
                            aria-invalid="false"
                            class="MuiInputBase-input emotion-35"
                            data-se="userProfile.secondEmail"
                            id="userProfile.secondEmail"
                            name="userProfile.secondEmail"
                            type="text"
                          />
                        </div>
                        <p
                          class="MuiFormHelperText-root o-form-explain emotion-42"
                          data-se="userProfile.secondEmail-explain"
                          id="userProfile.secondEmail-explain"
                        >
                          Use a second email to 
                          <span
                            class="strong"
                          >
                             recover your account 
                          </span>
                           in case you become locked out. This email must be verified after setup.
                        </p>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-18"
                    >
                      <div
                        class="MuiBox-root emotion-2"
                      >
                        <label
                          class="MuiFormLabel-root MuiInputLabel-root MuiFormLabel-colorPrimary MuiInputLabel-root emotion-45"
                          data-shrink="false"
                          for="userProfile.newAttribute2"
                        >
                          Some custom attribute 2
                          <span
                            aria-hidden="true"
                            class="no-translate MuiBox-root emotion-46"
                          >
                            *
                          </span>
                        </label>
                        <div
                          class="MuiInputBase-root MuiInputBase-colorPrimary Mui-error MuiInputBase-fullWidth emotion-34"
                        >
                          <input
                            aria-describedby=" userProfile.newAttribute2-error  "
                            aria-invalid="true"
                            class="MuiInputBase-input emotion-35"
                            data-se="userProfile.newAttribute2"
                            id="userProfile.newAttribute2"
                            name="userProfile.newAttribute2"
                            type="text"
                          />
                        </div>
                        <div
                          class="MuiBox-root emotion-2"
                        >
                          <p
                            class="MuiFormHelperText-root Mui-error emotion-42"
                            data-se="userProfile.newAttribute2-error"
                            id="userProfile.newAttribute2-error"
                            role="alert"
                          >
                            This field cannot be left blank
                          </p>
                        </div>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-18"
                    >
                      <button
                        class="MuiButtonBase-root MuiButton-root MuiButton-primary MuiButton-primaryPrimary MuiButton-sizeMedium MuiButton-primarySizeMedium MuiButton-disableElevation MuiButton-fullWidth MuiButton-root MuiButton-primary MuiButton-primaryPrimary MuiButton-sizeMedium MuiButton-primarySizeMedium MuiButton-disableElevation MuiButton-fullWidth emotion-52"
                        data-type="save"
                        tabindex="0"
                        type="submit"
                      >
                        Finish
                      </button>
                    </div>
                    <div
                      class="MuiBox-root emotion-18"
                    >
                      <button
                        class="MuiTypography-root MuiTypography-body1 MuiLink-root MuiLink-underlineAlways MuiLink-button emotion-54"
                        data-se="cancel"
                        role="link"
                        type="button"
                      >
                        Back to sign in
                      </button>
                    </div>
                  </div>
                </form>
              </div>
            </div>
          </div>
        </div>
      </main>
    </div>
  </div>
</div>
`;

exports[`enroll-profile-update-required-field should render form with one required field 1`] = `
<div>
  <div
    class="MuiScopedCssBaseline-root emotion-0"
  >
    <div
      class="MuiScopedCssBaseline-root emotion-1"
    >
      <main
        class="auth-container main-container MuiBox-root emotion-2"
        data-commit="b9bbc0140703c3fbf0e2e58920362e70"
        data-version="0.0.0"
        dir="ltr"
        id="okta-sign-in"
        lang="en"
      >
        <div
          class="MuiScopedCssBaseline-root emotion-3"
        >
          <div
            class="MuiBox-root emotion-4"
          >
            <div
              class="MuiBox-root emotion-5"
            >
              <div
                class="okta-sign-in-header auth-header MuiBox-root emotion-6"
              >
                <h1
                  class="MuiTypography-root MuiTypography-h1 emotion-7"
                />
              </div>
              <div
                class="MuiBox-root emotion-8"
              >
                <form
                  class="o-form MuiBox-root emotion-9"
                  data-se="o-form"
                  novalidate=""
                >
                  <div
                    class="MuiBox-root emotion-10"
                  >
                    <div
                      class="MuiBox-root emotion-11"
                    >
                      <div
                        class="identifier-container MuiBox-root emotion-12"
                      >
                        <div
                          class="MuiBox-root emotion-13"
                        >
                          <span
                            class="MuiBox-root emotion-14"
                          >
                            <svg
                              class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit emotion-15"
                              fill="none"
                              focusable="false"
                              role="img"
                              viewBox="0 0 24 24"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                clip-rule="evenodd"
                                d="M15.5 6.5a3.5 3.5 0 1 1-7 0 3.5 3.5 0 0 1 7 0Zm2 0a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0ZM5 23c0-2.357.694-4.363 1.886-5.762C8.064 15.856 9.782 15 12 15c2.215 0 3.934.862 5.113 2.25C18.307 18.652 19 20.66 19 23h2c0-2.722-.807-5.216-2.363-7.046C17.067 14.107 14.785 13 12 13c-2.782 0-5.064 1.097-6.636 2.941C3.806 17.77 3 20.263 3 23h2Z"
                                fill="currentColor"
                                fill-rule="evenodd"
                              />
                              <title>
                                User
                              </title>
                            </svg>
                          </span>
                          <span
                            aria-label="testUser@okta.com"
                            class="identifier no-translate MuiBox-root emotion-16"
                            data-se="identifier"
                            title="testUser@okta.com"
                          >
                            testUser@okta.com
                          </span>
                        </div>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-11"
                    >
                      <div
                        class="MuiBox-root emotion-18"
                      >
                        <h2
                          class="MuiTypography-root MuiTypography-h4 emotion-19"
                          data-se="o-form-head"
                          id="profile-update_Title_Additional_Profile_information_1"
                          tabindex="-1"
                        >
                          Additional Profile information
                        </h2>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-11"
                    >
                      <div
                        class="MuiBox-root emotion-18"
                      >
                        <p
                          class="MuiTypography-root MuiTypography-body1 MuiTypography-paragraph emotion-22"
                          data-se="o-form-explain"
                          id="profile-update_Description_Fields_are_required_unless_marked_optional_2"
                        >
                          Fields are required unless marked optional.
                        </p>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-11"
                    >
                      <div
                        class="MuiBox-root emotion-2"
                      >
                        <label
                          class="MuiFormLabel-root MuiInputLabel-root MuiFormLabel-colorPrimary MuiInputLabel-root emotion-25"
                          data-shrink="false"
                          for="userProfile.newAttribute"
                        >
                          Some custom attribute
                          <p
                            class="MuiTypography-root MuiTypography-subtitle1 emotion-26"
                          >
                            Optional
                          </p>
                        </label>
                        <div
                          class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-fullWidth emotion-27"
                        >
                          <input
                            aria-invalid="false"
                            class="MuiInputBase-input emotion-28"
                            data-se="userProfile.newAttribute"
                            id="userProfile.newAttribute"
                            name="userProfile.newAttribute"
                            type="text"
                          />
                        </div>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-11"
                    >
                      <div
                        class="MuiBox-root emotion-2"
                      >
                        <label
                          class="MuiFormLabel-root MuiInputLabel-root MuiFormLabel-colorPrimary MuiInputLabel-root emotion-25"
                          data-shrink="false"
                          for="userProfile.secondEmail"
                        >
                          Secondary email
                          <p
                            class="MuiTypography-root MuiTypography-subtitle1 emotion-26"
                          >
                            Optional
                          </p>
                        </label>
                        <div
                          class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-fullWidth emotion-27"
                        >
                          <input
                            aria-describedby="userProfile.secondEmail-explain"
                            aria-invalid="false"
                            class="MuiInputBase-input emotion-28"
                            data-se="userProfile.secondEmail"
                            id="userProfile.secondEmail"
                            name="userProfile.secondEmail"
                            type="text"
                          />
                        </div>
                        <p
                          class="MuiFormHelperText-root o-form-explain emotion-35"
                          data-se="userProfile.secondEmail-explain"
                          id="userProfile.secondEmail-explain"
                        >
                          Use a second email to 
                          <span
                            class="strong"
                          >
                             recover your account 
                          </span>
                           in case you become locked out. This email must be verified after setup.
                        </p>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-11"
                    >
                      <div
                        class="MuiBox-root emotion-2"
                      >
                        <label
                          class="MuiFormLabel-root MuiInputLabel-root MuiFormLabel-colorPrimary MuiInputLabel-root emotion-38"
                          data-shrink="false"
                          for="userProfile.newAttribute2"
                        >
                          Some custom attribute 2
                          <span
                            aria-hidden="true"
                            class="no-translate MuiBox-root emotion-39"
                          >
                            *
                          </span>
                        </label>
                        <div
                          class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-fullWidth emotion-27"
                        >
                          <input
                            aria-invalid="false"
                            class="MuiInputBase-input emotion-28"
                            data-se="userProfile.newAttribute2"
                            id="userProfile.newAttribute2"
                            name="userProfile.newAttribute2"
                            type="text"
                          />
                        </div>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-11"
                    >
                      <button
                        class="MuiButtonBase-root MuiButton-root MuiButton-primary MuiButton-primaryPrimary MuiButton-sizeMedium MuiButton-primarySizeMedium MuiButton-disableElevation MuiButton-fullWidth MuiButton-root MuiButton-primary MuiButton-primaryPrimary MuiButton-sizeMedium MuiButton-primarySizeMedium MuiButton-disableElevation MuiButton-fullWidth emotion-43"
                        data-type="save"
                        tabindex="0"
                        type="submit"
                      >
                        Finish
                      </button>
                    </div>
                    <div
                      class="MuiBox-root emotion-11"
                    >
                      <button
                        class="MuiTypography-root MuiTypography-body1 MuiLink-root MuiLink-underlineAlways MuiLink-button emotion-45"
                        data-se="cancel"
                        role="link"
                        type="button"
                      >
                        Back to sign in
                      </button>
                    </div>
                  </div>
                </form>
              </div>
            </div>
          </div>
        </div>
      </main>
    </div>
  </div>
</div>
`;
